<resources>
    <string name="app_name">NeostarDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="users">Users</string>
    <string name="last_name">Last Name*</string>
    <string name="first_name">First Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="email">Email*</string>
    <string name="gender">Gender</string>
    <string name="enter_your_first_name_here">Enter your first name here</string>
    <string name="enter_your_last_name_here">Enter your last name here</string>
    <string name="enter_your_10_digit_phone_number">Enter your 10 digit phone number</string>
    <string name="your_email_goes_here">Your email goes here</string>
    <string name="password">Password</string>
    <string name="password_">Password*</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="pincode">Pin code</string>
    <string name="city">City</string>
    <string name="landmark">Landmark</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="edu_info">Educational Info</string>
    <string name="prof_info">Professional Info</string>
    <string name="basic_info">Basic Info</string>
    <string name="education">Education*</string>
    <string name="grade">Grade*</string>
    <string name="year_of_passing">Year of Passing*</string>
    <string name="experience">Experience*</string>
    <string name="designation">Designation*</string>
    <string name="domain">Domain</string>
    <string name="previous">Previous</string>
    <string name="your_info">your Info</string>
    <string name="select_qualification">Select your qualification</string>
    <string name="grade_percent_hint">Enter your Grade or Percentage</string>
    <string name="enter_passing_hint">Enter year of passing</string>
    <string name="enter_experience_hint">Enter the year of experience</string>
    <string name="enter_designation">Enter your Designation</string>
    <string name="enter_domain">Enter your Domain</string>
    <string name="blank_first_name">Please enter your first name.</string>
    <string name="valid_first_name">First name should be more than 3 characters.</string>
    <string name="blank_last_name">Please enter your last name.</string>
    <string name="valid_last_name">Last name should be more than 3 characters.</string>

    <string name="blank_email">Please enter your email.</string>
    <string name="valid_email">Invalid Email.</string>

    <string name="blank_phone">Please enter your phone number.</string>
    <string name="valid_phone">Invalid phone number.</string>

    <string name="blank_password">Please enter your password.</string>
    <string name="valid_password">Your password must contain min 1 number and 1 special character.</string>

    <string name="blank_confirm_password">Please enter confirm password.</string>

    <string name="same_password">Confirm password and password must be same.</string>
    <string name="invalid_passing_year">Invalid passing year.</string>

    <string name="blank_qualification">Please select your qualification.</string>
    <string name="blank_grade">Please enter your grade.</string>
    <string name="blank_designation">Please enter your designation.</string>
    <string name="blank_domain">Please enter your domain.</string>
    <string name="blank_experience">Please enter your experience.</string>
    <string name="blank_year_of_passing">Please enter your passing year.</string>
    <string name="info">Your Info</string>
    <string name="your_address">Your Address</string>

    <string name="blank_address">Please enter your address.</string>
    <string name="valid_address"> Address should be more than 3 characters.</string>

    <string name="blank_landmark">Please enter your landmark.</string>
    <string name="valid_landmark">Landmark should be more than 3 characters.</string>

    <string name="blank_city">Please enter your city.</string>
    <string name="valid_city">City should be more than 3 characters.</string>

    <string name="blank_state">Please select your state.</string>
    <string name="blank_pin_code">Please enter your pin code.</string>
    <string name="invalid_pin_code">Invalid pin code.</string>
    <string name="no_data">No user found.</string>
    <string name="pick_from">Pick From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="blank_pic">Please add your picture.</string>

    <string name="passing_year">Passing year - </string>
    <string name="cgpa">CGPA - </string>
    <string name="year_of_experience">years of experience</string>
    <string name="department"> Department</string>
</resources>