<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainViewModel"
            type="com.neostardemo.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_edu_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_info"
                    android:textAppearance="@style/txtBoldBlack20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/education"
                    android:textAppearance="@style/txtBoldBlack14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_edu_info" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tip_education"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_qualification"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_education">

                    <AutoCompleteTextView
                        android:id="@+id/act_education"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        tools:ignore="LabelFor"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_passing_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/year_of_passing"
                    android:textAppearance="@style/txtBoldBlack14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tip_education" />

                <EditText
                    android:id="@+id/et_passing_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_round_edittext"
                    android:hint="@string/enter_passing_hint"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="@dimen/dp_14"
                    android:text="@={MainViewModel.yearOfPassing}"
                    android:textAppearance="@style/txtBoldBlack16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_passing_year" />

                <TextView
                    android:id="@+id/tv_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/grade"
                    android:textAppearance="@style/txtBoldBlack14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_passing_year" />

                <EditText
                    android:id="@+id/et_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:background="@drawable/rect_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890"
                    android:hint="@string/grade_percent_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/dp_14"
                    android:text="@={MainViewModel.grade}"
                    android:textAppearance="@style/txtBoldBlack16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_grade" />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_18"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_grade" />

                <TextView
                    android:id="@+id/tv_Prof_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_18"
                    android:text="@string/prof_info"
                    android:textAppearance="@style/txtBoldBlack20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_line" />


                <TextView
                    android:id="@+id/tv_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/experience"
                    android:textAppearance="@style/txtBoldBlack14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Prof_info" />

                <EditText
                    android:id="@+id/et_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_round_edittext"
                    android:hint="@string/enter_experience_hint"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:padding="@dimen/dp_14"
                    android:text="@={MainViewModel.experience}"
                    android:textAppearance="@style/txtBoldBlack16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_experience" />

                <TextView
                    android:id="@+id/tv_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/designation"
                    android:textAppearance="@style/txtBoldBlack14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_experience" />

                <EditText
                    android:id="@+id/et_designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="@string/enter_designation"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"

                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:padding="@dimen/dp_14"
                    android:text="@={MainViewModel.designation}"
                    android:textAppearance="@style/txtBoldBlack16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_designation" />


                <TextView
                    android:id="@+id/tv_domain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/domain"
                    android:textAppearance="@style/txtBoldBlack14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_designation" />

                <EditText
                    android:id="@+id/et_domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="@string/enter_domain"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:padding="@dimen/dp_14"
                    android:text="@={MainViewModel.domain}"
                    android:textAppearance="@style/txtBoldBlack16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_domain" />


                <Button
                    android:id="@+id/tvPrevious"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_40"
                    android:background="@drawable/rect_blue_button"
                    android:onClick="@{(view) -> MainViewModel.onInfoPreviousClick(view)}"
                    android:paddingVertical="@dimen/dp_5"
                    android:text="@string/previous"
                    android:textAlignment="center"
                    android:textAppearance="@style/txtBoldBlue20"
                    android:textColor="@color/purple_500"
                    app:layout_constraintEnd_toStartOf="@+id/tvNext"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_domain" />

                <Button
                    android:id="@+id/tvNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_40"
                    android:layout_marginStart="@dimen/dp_20"
                    android:background="@drawable/rect_blue_filled_button"
                    android:onClick="@{(view) -> MainViewModel.onInfoNextClick(view)}"
                    android:paddingVertical="@dimen/dp_5"
                    android:text="@string/next"
                    android:textAlignment="center"
                    android:textAppearance="@style/txtBoldWhite20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvPrevious"
                    app:layout_constraintTop_toBottomOf="@+id/et_domain" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>